kubernetes/mqtt.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt
  labels:
    app: mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mqtt
  template:
    metadata:
      labels:
        app: mqtt
    spec:
      containers:
      - name: mqtt
        image: eclipse-mosquitto:latest
        ports:
        - containerPort: 1883
        - containerPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: mqtt-service
spec:
  type: NodePort
  selector:
    app: mqtt
  ports:
  - port: 1883
    targetPort: 1883
  - port: 9001
    targetPort: 9001
