kubernetes/home-assistant.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  labels:
    app: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
      - name: home-assistant
        image: homeassistant/home-assistant
        command: []
        ports:
        - containerPort: 8123
        volumeMounts:
        - name: config
          mountPath: "/config"
        lifecycle:
          postStart:
            exec:
              command: [ '/bin/bash', '-c', 'apt-get update && apt-get -y install git && git clone https://github.com/k2r79/home-automation.git && cd home-automation && git checkout develop && mv config/home-assistant/* /config && python -m homeassistant --config /config' ]
      volumes:
      - name: config
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-service
spec:
  type: NodePort
  selector:
    app: home-assistant
  ports:
  - port: 80
    targetPort: 8123
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  name: home-assistant-ingress
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: kubernetes.local
    http:
      paths:
      - path: /
        backend:
          serviceName: home-assistant-service
          servicePort: 80
